# libAuthGC

./: .gitmodules  CMakeLists.txt  README.md
.run/: Passive Ferret.run.xml  README  Simple Circuit.run.xml  passive-ferret-client.run.xml  passive-ferret-server.run.xml  simple_circuit-client.run.xml  simple_circuit-server.run.xml
benchmark/: benchmark.cpp
cmake/: base.cmake  enable_rdseed.cmake
include/: DVZK.hpp  PRNG.hpp  authed_bit.hpp  block_correlated_OT.hpp  circuit_parser.hpp  global_key_sampling.hpp  params.hpp  socket.hpp  utils.hpp
include/ATLab/: 2PC_execution.hpp  DVZK.hpp  authed_bit.hpp  benchmark.hpp  block_correlated_OT.hpp  circuit_parser.hpp  garble_evaluate.hpp  global_key_sampling.hpp  hash_wrapper.h  matrix.hpp  net-io.hpp  params.hpp  preprocess.hpp  traits.hpp  util_protocols.hpp  utils.hpp
include/ATLab/EndemicOT/: EndemicOT.hpp  Endemic_OT_C.h  OTTools.h
include/EndemicOT/: EndemicOT.hpp  authed_bit.hpp
src/: 2PC_execution.cpp  PRNG.cpp  authed_bit.cpp  circuit.cpp  garble_evaluate.cpp  gc_check.cpp  matrix.cpp  preprocess.cpp  socket.cpp  util_protocols.cpp  utils.cpp
src/EndemicOT/: EndemicOT.cpp  Endemic_OT_C.c  OTTools.c
tests/: DVZK.test.cpp  EndemicOT.test.cpp  IKNP.test.cpp  PRNG.test.cpp  authed_bit.test.cpp  bCOT.test.cpp  circuit.test.cpp  full-execution.test.cpp  galois-field-arithmetics.test.cpp  global_key_sampling.test.cpp  io.test.cpp  preprocessor.test.cpp  test-helper.hpp  vector_inner_product_benchmark.test.cpp
tests/circuits/: one-gate-AND.txt  one-gate-NOT.txt  one-gate-XOR.txt  test_circuit.txt
